# tsp-with-vd

./: .gitignore  CMakeLists.txt  README.md  sample.cpp
data/: 5.22985.txt  5.23926.txt  a280_2app.txt  a280_christofides.txt  a280_result.txt  a280opt.txt  answer_voronoi_edge.txt  answer_voronoi_face.txt  answer_voronoi_vertices.txt  checkPoint.txt  d1291.txt  d1291_2app.txt  d1291_christofides.txt  d15112_2app.txt  d15112_christofides.txt  d493_2app.txt  d493_christofides.txt  delaunay.txt  displacement.txt  euler_path.txt  hamiltonian_path.txt  inversion.txt  inversionsfsdf.txt  mpm.txt  mst.txt  odd_edge.txt  odd_face.txt  odd_mst.txt  pcb3038.txt  pcb3038_2app.txt  pcb3038_christofides.txt  pcb442_2app.txt  pcb442_christofides.txt  pla33810_2app.txt  pla33810_christofides.txt  pla33810_result.txt  pla33810opt.txt  pla85900_2app.txt  point.txt  pr1002_2app.txt  (+25 more)
data/input/: a280.txt  d18512.txt  u724.txt
data/output/: a280_christofides.txt  a280_result.txt  a280_result_chri.txt  a280result.txt  answer_voronoi_edge.txt  answer_voronoi_face.txt  answer_voronoi_vertices.txt  d1291_2app.txt  d1291_christofides.txt  d1291_result.txt  d1291_result_2app.txt  d1291_result_chri.txt  d15112_2app.txt  d15112_christofides.txt  d15112_result_chri.txt  d18512_2app.txt  (+40 more)
include/: blossom.h  city.h  eul.h  euler.h  file_stream.h  hamiltonian.h  heuristic_algorithm.h
py/: draw.py  file_stream.py  main.py  plt_lib.py  test.py  vd_2d.py
py2/: file_stream.py
src/: blossom.cpp  city.cpp  eul.cpp  euler.cpp  file_stream.cpp  hamiltonian.cpp  heuristic_algorithm.cpp  main.cpp
(+744 files in other folders)
